tests/error/dot_single.gw
#! [contains] can't use multiple expression
(me, 1).id();
